--- a/public/index.html
+++ b/public/index.html
@@ -1284,8 +1284,8 @@ window.onload = initDashboard;
     </button>
 </nav>
 
-<div id="panel-programacion-flotante" 
-     style="display: none !important; position: fixed !important; bottom: 30px !important; left: 50% !important; transform: translateX(-50%) !important; z-index: 9999 !important;" 
+<<div id="panel-programacion-flotante" 
+     style="display: none; position: fixed; bottom: 110px; left: 50%; transform: translateX(-50%); z-index: 9999;" 
      class="bg-slate-900 text-white px-6 py-4 rounded-3xl shadow-2xl flex items-center gap-6">
     
     <div class="flex flex-col">
