--- a/public/index.html
+++ b/public/index.html
@@ -258,8 +258,8 @@
     <div class="relative flex items-center justify-center">
         <input type="date" id="fechaFiltroPedidos" 
                class="bg-transparent border-none font-black text-slate-900 outline-none text-sm w-32 cursor-pointer" 
-               onchange="cargarPedidosDashboard()">
-    </div>
+               onchange="renderizarPedidosLista()"> </div>
+</div>
 
     <div class="h-6 w-[1px] bg-slate-200"></div>
 
