--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
                 
                 <button onclick="irMisEstaciones()" id="btn-nav-estaciones" 
                     class="nav-item w-full flex items-center gap-4 p-3 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold text-left group">
-                    <div class="w-10 h-10 rounded-xl bg-slate-800/50 flex items-center justify-center group-hover:bg-blue-600/20 transition-all">
+                    <div class="w-10 h-10 rounded-xl bg-white/5 flex items-center justify-center group-hover:bg-blue-600 transition-all">
                         <i class="fas fa-store"></i>
                     </div>
                     <span>Mis Estaciones</span>
@@ -159,7 +159,7 @@
 
                 <button onclick="irMisPedidos()" id="btn-nav-pedidos" 
                     class="nav-item w-full flex items-center gap-4 p-3 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold text-left group">
-                    <div class="w-10 h-10 rounded-xl bg-slate-800/50 flex items-center justify-center group-hover:bg-blue-600/20 transition-all">
+                    <div class="w-10 h-10 rounded-xl bg-white/5 flex items-center justify-center group-hover:bg-blue-600 transition-all">
                         <i class="fas fa-clipboard-list"></i>
                     </div>
                     <span>Mis Pedidos</span>
@@ -167,7 +167,7 @@
 
                 <button onclick="irMisCréditos()" id="btn-nav-creditos" 
                     class="nav-item w-full flex items-center gap-4 p-3 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold text-left group">
-                    <div class="w-10 h-10 rounded-xl bg-slate-800/50 flex items-center justify-center group-hover:bg-blue-600/20 transition-all">
+                    <div class="w-10 h-10 rounded-xl bg-white/5 flex items-center justify-center group-hover:bg-blue-600 transition-all">
                         <i class="fas fa-wallet"></i>
                     </div>
                     <span>Mis Créditos</span>
@@ -183,8 +183,8 @@
                     <p id="userStation" class="text-[9px] text-slate-500 font-bold uppercase tracking-tighter truncate opacity-80">---</p>
                 </div>
             </div>
-            <button onclick="logout()" class="w-full flex items-center gap-3 text-sm text-slate-500 hover:text-red-500 transition-colors font-black uppercase tracking-widest">
-                <i class="fas fa-sign-out-alt text-xs"></i> Cerrar Sesión
+            <button onclick="logout()" class="w-full text-left text-sm text-slate-500 hover:text-red-500 transition-colors font-bold">
+                <i class="fas fa-sign-out-alt mr-2"></i> Cerrar Sesión
             </button>
         </div>
     </aside>
